[package]
name = "ferrum-sniffer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bitflags = "2.11.1"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
pcap = "2.4.0"
pnet_packet = "0.35.0"
sqlx = { version = "0.9.0", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.52.3", features = ["full"] }
